--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.letsgoo">
+    package="com.eskisehir.letsgo">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -9,7 +15,58 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Login.AskiyaAlindiActivity"/>
+        <activity android:name=".Admin.AdminActivity" />
+        <activity android:name=".Add.IlanDuzenleActivity" />
+        <activity android:name=".Profil.YolcuPuanlamaActivity" />
+        <activity android:name=".Search.SearchResultMapActivity" />
+        <activity android:name=".Home.BasvuranlarActivity" />
+
+
+
+
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity android:name=".Add.LocationActivity" />
+        <activity android:name=".Profil.SifreDegistir" />
+        <activity android:name=".Profil.AcikProfil" />
+        <activity android:name=".Profil.TransferGecmisi" />
+        <activity android:name=".Profil.RezervasyonGecmisi" />
+        <activity android:name=".Profil.BirikenBakiye" />
+        <activity android:name=".Profil.VerilenPuanlar" />
+        <activity android:name=".Profil.AddCar" />
+        <activity android:name=".Profil.Tercihler" />
+        <activity android:name=".Profil.KisiselBilgiler" />
+        <activity android:name=".Message.ChatActivity" />
+        <activity android:name=".Home.MainActivity" />
+        <activity android:name=".Login.LoginActivity" />
+        <activity android:name=".Login.RegisterActivity" />
+        <activity android:name=".Search.IlanDetayActivity" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_application_id" />
+
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Login.FirstActivity"  android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
