--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.eskisehir.letsgo"
+        applicationId "com.example.letsgoo"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
